# main

AI intern task/: readme.md
AI intern task/backend/: main.py
AI intern task/backend/core/: ai_client.py  game_logic.py  moderation.py
AI intern task/frontend/: streamlit_app.py
Healthcare-Translation-Web-App-main/: README.md
Healthcare-Translation-Web-App-main/backend/: backendreadme.md
Healthcare-Translation-Web-App-main/backend/api/: app.py
Healthcare-Translation-Web-App-main/frontend/: frontend.py  record_audio.html
Medical_chatbot/: api.py  dbchatbot.py  readme.md
Medical_chatbot/templates/: chatbot.html
Review_system/: main2.py  readme.md  scraping.py
Tool+RAG/: backend.py  frontend.py  readme.md  vector.py
asset_reminder/: API.postman_collection.json  db.sqlite3  manage.py  readme.md
asset_reminder/asset_reminder/: asgi.py  settings.py  urls.py  wsgi.py
asset_reminder/assets/: admin.py  apps.py  models.py  serializers.py  tasks.py  test.py  urls.py  views.py
asset_reminder/assets/migrations/: 0001_initial.py
healtcare-deployment-final/: main.py  pyproject.toml  readme.md  requirements.txt
my_agent/: agent.py  readme.md
new ai task/: aiagent.py  archiecture.md  index.html  package-lock.json  readme.md  readme_md.md  requirement.txt.txt  tailwind.config.ts
new ai task/backend/: package-lock.json  package.json  readme.md
new ai task/backend/samples/: AI Engineer – Job Description (3 Ye.txt  resumessample.txt
new ai task/src/: index.css
wasserstoff/AiInternTask/: RAG+OCR.py  readme.md  requirements.txt
(+16 files in other folders)
